--- a/css/util.css
+++ b/css/util.css
@@ -313,7 +313,7 @@
 .p-t-105 {padding-top: 105px;}
 .p-t-106 {padding-top: 106px;}
 .p-t-107 {padding-top: 107px;}
-.p-t-108 {padding-top: 108px;}
+.p-t-108 {justify-content:center;padding-top: 108px;}
 .p-t-109 {padding-top: 109px;}
 .p-t-110 {padding-top: 110px;}
 .p-t-111 {padding-top: 111px;}
